--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -2,101 +2,62 @@
 
 # project information
 project_name: photoshow
-full_custom_readme: |
-  {% raw -%}
-  [linuxserverurl]: https://linuxserver.io
-  [forumurl]: https://forum.linuxserver.io
-  [ircurl]: https://www.linuxserver.io/irc/
-  [podcasturl]: https://www.linuxserver.io/podcast/
-  [appurl]: https://github.com/thibaud-rohmer/PhotoShow
-  [hub]: https://hub.docker.com/r/linuxserver/photoshow/
+project_url: "https://github.com/thibaud-rohmer/PhotoShow"
+project_logo: "https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/photoshow-icon.png"
+project_blurb: "[{{ project_name|capitalize }}]({{ project_url }}) is gallery software at its easiest, it doesn't even require a database."
+project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
+project_blurb_optional_extras_enabled: false
 
-  [![linuxserver.io](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/linuxserver_medium.png)][linuxserverurl]
+# supported architectures
+available_architectures:
+  - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
+  - { arch: "{{ arch_arm64 }}", tag: "arm64v8-latest"}
+  - { arch: "{{ arch_armhf }}", tag: "arm32v6-latest"}
 
-  The [LinuxServer.io][linuxserverurl] team brings you another container release featuring easy user mapping and community support. Find us for support at:
-  * [forum.linuxserver.io][forumurl]
-  * [IRC][ircurl] on freenode at `#linuxserver.io`
-  * [Podcast][podcasturl] covers everything to do with getting the most from your Linux Server plus a focus on all things Docker and containerisation!
+# development version
+development_versions: false
 
-  # linuxserver/photoshow
-  [![](https://images.microbadger.com/badges/version/linuxserver/photoshow.svg)](https://microbadger.com/images/linuxserver/photoshow "Get your own version badge on microbadger.com")[![](https://images.microbadger.com/badges/image/linuxserver/photoshow.svg)](https://microbadger.com/images/linuxserver/photoshow "Get your own image badge on microbadger.com")[![Docker Pulls](https://img.shields.io/docker/pulls/linuxserver/photoshow.svg)][hub][![Docker Stars](https://img.shields.io/docker/stars/linuxserver/photoshow.svg)][hub][![Build Status](https://ci.linuxserver.io/buildStatus/icon?job=Docker-Builders/x86-64/x86-64-photoshow)](https://ci.linuxserver.io/job/Docker-Builders/job/x86-64/job/x86-64-photoshow/)
+# container parameters
+common_param_env_vars_enabled: true
+param_container_name: "{{ project_name }}"
+param_usage_include_net: false
+param_usage_include_env: true
+param_env_vars:
+  - { env_var: "TZ", env_value: "Europe/London", desc: "Specify a timezone to use EG Europe/London." }
+param_usage_include_vols: true
+param_volumes:
+  - { vol_path: "/config", vol_host_path: "<path to data>", desc: "Stores config and logs for nginx base." }
+  - { vol_path: "/Pictures:ro", vol_host_path: "<path to pictures>", desc: "Your local folder of photos you wish to share." }
+  - { vol_path: "/Thumbs", vol_host_path: "<path to store thumbs>", desc: "Local folder to store thumbnails of your images." }
+param_usage_include_ports: true
+param_ports:
+  - { external_port: "80", internal_port: "80", port_desc: "WebUI" }
+param_device_map: false
+cap_add_param: false
 
-  [Photoshow][appurl] is gallery software at its easiest, it doesn't even require a database.
+# optional container parameters
+opt_param_usage_include_env: false
+opt_param_usage_include_vols: false
+opt_param_usage_include_ports: false
+opt_param_device_map: false
+opt_cap_add_param: false
+optional_block_1: false
 
-  [![photoshow](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/photoshow-icon.png)][appurl]
-
-  ## Usage
-
-  ```
-  docker create \
-  --name=photoshow \
-  -v <path to data>:/config \
-  -v <path to pictures>:/Pictures:ro \
-  -v <path to store thumbs>:/Thumbs \
-  -e PGID=<gid> -e PUID=<uid> \
-  -e TZ=<timezone> \
-  -p 80:80 \
-  linuxserver/photoshow
-  ```
-
-  ## Parameters
-
-  `The parameters are split into two halves, separated by a colon, the left hand side representing the host and the right the container side.
-  For example with a port -p external:internal - what this shows is the port mapping from internal to external of the container.
-  So -p 8080:80 would expose port 80 from inside the container to be accessible from the host's IP on port 8080
-  http://192.168.x.x:8080 would show you what's running INSIDE the container on port 80.`
-
-
-  * `-p 80` - port for the webui
-  * `-v /config` - stores config and logs for nginx base
-  * `-v /Pictures` - your local folder of photos you wish to share
-  * `-v /Thumbs` - local folder to store thumbnails of your images
-  * `-e PGID` for GroupID - see below for explanation
-  * `-e PUID` for UserID - see below for explanation
-  * `-e TZ` - for timezone information *eg Europe/London, etc*
-
-  It is based on alpine linux with s6 overlay, for shell access whilst the container is running do `docker exec -it photoshow /bin/bash`.
-
-  ### User / Group Identifiers
-
-  Sometimes when using data volumes (`-v` flags) permissions issues can arise between the host OS and the container. We avoid this issue by allowing you to specify the user `PUID` and group `PGID`. Ensure the data volume directory on the host is owned by the same user you specify and it will "just work" ™.
-
-  In this instance `PUID=1001` and `PGID=1001`. To find yours use `id user` as below:
-
-  ```
-    $ id <dockeruser>
-      uid=1001(dockeruser) gid=1001(dockergroup) groups=1001(dockergroup)
-  ```
-
-  ## Setting up the application
-
+# application setup block
+app_setup_block_enabled: true
+app_setup_block: |
   On first run create an admin account, any folder and its subfolders that you map to /Pictures will be presented as a webgallery. Config settings are persistent and stored as a subfolder of the /Thumbs mapping.
 
-
-  ## Info
-
-  * To monitor the logs of the container in realtime `docker logs -f photoshow`.
-
-
-  * container version number
-
-  `docker inspect -f '{{ index .Config.Labels "build_version" }}' photoshow`
-
-  * image version number
-
-  `docker inspect -f '{{ index .Config.Labels "build_version" }}' linuxserver/photoshow`
-
-  ## Versions
-
-  + **16.01.19:** Add pipeline logic and multi arch.
-  + **05.09.18:** Rebase to alpine 3.8.
-  + **07.01.18:** Rebase to alpine 3.7.
-  + **25.05.17:** Rebase to alpine 3.6.
-  + **03.05.17:** Use repo pinning to better solve dependencies, use repo version of php7-imagick.
-  + **14.02.17:** Rebase to alpine 3.5.
-  + **14.10.16:** Add version layer information.
-  + **30.09.16:** Rebase to alpine linux.
-  + **11.09.16:** Add layer badges to README.
-  + **21.08.15:** Use patched keybaord js from fork of photoshow
-  + **21.08.15:** Initial Release.
-  {%- endraw %}
+# changelog
+changelogs:
+  - { date: "16.01.19:", desc: "Add pipeline logic and multi arch." }
+  - { date: "05.09.18:", desc: "Rebase to alpine 3.8." }
+  - { date: "07.01.18:", desc: "Rebase to alpine 3.7." }
+  - { date: "25.05.17:", desc: "Rebase to alpine 3.6." }
+  - { date: "03.05.17:", desc: "Use repo pinning to better solve dependencies, use repo version of php7-imagick." }
+  - { date: "14.02.17:", desc: "Rebase to alpine 3.5." }
+  - { date: "14.10.16:", desc: "Add version layer information." }
+  - { date: "30.09.16:", desc: "Rebase to alpine linux." }
+  - { date: "11.09.16:", desc: "Add layer badges to README." }
+  - { date: "21.08.15:", desc: "Use patched keybaord js from fork of photoshow." }
+  - { date: "21.08.15:", desc: "Initial Release." }
