--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -50,6 +50,7 @@ app_setup_block: |
 
 # changelog
 changelogs:
+  - { date: "01.06.20:", desc: "Rebasing to alpine 3.12." }
   - { date: "19.12.19:", desc: "Rebasing to alpine 3.11." }
   - { date: "23.09.19:", desc: "Adding PHP-Exif for image metadata and processing." }
   - { date: "28.06.19:", desc: "Rebasing to alpine 3.10." }
