--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -8,6 +8,9 @@ project_blurb: "[{{ project_name|capitalize }}]({{ project_url }}) is gallery so
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
 project_blurb_optional_extras_enabled: false
 
+# deprecation information
+project_deprecation_status: true
+
 # supported architectures
 available_architectures:
   - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
